src/objects/Interaction__c.object
<CustomObject>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mailing_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acre</fullName>
                </value>
                <value>
                    <fullName>Agrigento</fullName>
                </value>
                <value>
                    <fullName>Aguascalientes</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alagoas</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Alessandria</fullName>
                </value>
                <value>
                    <fullName>Amapá</fullName>
                </value>
                <value>
                    <fullName>Amazonas</fullName>
                </value>
                <value>
                    <fullName>Ancona</fullName>
                </value>
                <value>
                    <fullName>Andaman and Nicobar Islands</fullName>
                </value>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Aosta</fullName>
                </value>
                <value>
                    <fullName>Arezzo</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Ascoli Piceno</fullName>
                </value>
                <value>
                    <fullName>Assam</fullName>
                </value>
                <value>
                    <fullName>Asti</fullName>
                </value>
                <value>
                    <fullName>Australian Capital Territory</fullName>
                </value>
                <value>
                    <fullName>Avellino</fullName>
                </value>
                <value>
                    <fullName>Bahia</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baja California Sur</fullName>
                </value>
                <value>
                    <fullName>Bari</fullName>
                </value>
                <value>
                    <fullName>Barletta-Andria-Trani</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Street_1_and_2__c</fullName>
        <description>For data loads, we get address on two lines. Out of the box, Interactions has one text area. This formula combines the Mailing Street 1 an 2 and then it gets loaded into Lead or Contact from an Interaction Mapping.</description>
        <formula>IF(ISBLANK(Mailing_Street_2__c), 
  Mailing_Street__c,
  Mailing_Street__c + SUBSTITUTE($Label.NewLine,&quot;-&quot;,&quot;&quot;) + Mailing_Street_2__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street 1 and 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_2__c</fullName>
        <description>For data loads, we get address on two lines. Out of the box, Interactions has one text area. We are using that field as Line 1, this field as line 2, and then they are combined in the &quot;Mailing Street 1 and 2&quot; formula field which is sent to the Contact or Lead via Interaction Mapping</description>
        <label>Mailing Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <description>The Marketing Campaign that brought in this Source. &quot;State Fair&quot; and &quot;haworth_fy19&quot; are examples.</description>
        <label>Marketing Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Interaction__c</fullName>
        <formula>TEXT(Lead_Source__c) ==  &quot;Camps&quot; ||
TEXT(Lead_Source__c) ==  &quot;Chat&quot; ||
TEXT(Lead_Source__c) ==  &quot;Conferences &amp; Fairs&quot; ||
TEXT(Lead_Source__c) ==  &quot;Email&quot; ||
TEXT(Lead_Source__c) ==  &quot;Event &amp; Visits&quot; ||
TEXT(Lead_Source__c) ==  &quot;Internal&quot; ||
TEXT(Lead_Source__c) ==  &quot;List &amp; Vendor&quot; ||
TEXT(Lead_Source__c) ==  &quot;Phone&quot; ||
TEXT(Lead_Source__c) ==  &quot;Referral&quot; ||
TEXT(Lead_Source__c) ==  &quot;Registrar&quot; ||
TEXT(Lead_Source__c) ==  &quot;Transcripts&quot; ||
TEXT(Lead_Source__c) ==  &quot;Website&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Interaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Medium__c</fullName>
        <defaultValue>&quot;Other&quot;</defaultValue>
        <description>The Medium used to bring in this source.</description>
        <label>Marketing Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>Display (Ad)</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>OOH</fullName>
                </value>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Retargeting (Ad)</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <defaultValue>&quot;Other&quot;</defaultValue>
        <description>The Source we got Marketing Info from.</description>
        <label>Marketing Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adroll</fullName>
                </value>
                <value>
                    <fullName>AOL</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
                <value>
                    <fullName>Bing</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Findmba</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>KS95</fullName>
                </value>
                <value>
                    <fullName>Linked-in</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pandora</fullName>
                </value>
                <value>
                    <fullName>Rocketfuel</fullName>
                </value>
                <value>
                    <fullName>Salemweb</fullName>
                </value>
                <value>
                    <fullName>Skyway</fullName>
                </value>
                <value>
                    <fullName>Snapchat</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Yahoo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>Set to the Start Date of the Term. If Term Start Date is blank, set to today&apos;s date.</description>
        <formula>IF (ISBLANK(Academic_Term__c),TODAY(),Academic_Term__r.Term_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Key__c</fullName>
        <description>The Interaction Processor adds the Contact ID to the beginning of this key to match on Opportunities. If this field is blank, no Opportunity will be created. Contact ID + this key should equal the Opportunity Key also updated through workflow.</description>
        <formula>IF(
   NOT(ISPICKVAL(Source_Detail__c, &apos;Application&apos;) || ISPICKVAL(Interaction_Source__c, &apos;Family Member Create&apos;)),
   &quot;.&quot; + TEXT(School_College__c) + &quot;.&quot; + Academic_Term__r.Name,
   &quot;&quot;
)</formula>
        <label>Opportunity Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Last Name - Term Name, used to set the Name of the Opportunity that will be created or updated.</description>
        <formula>Last_Name__c + &apos;, &apos; + First_Name__c +
IF (Academic_Term__r.Name = &apos;&apos;,&apos;&apos;,&apos; - &apos; + Academic_Term__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage_Detail__c</fullName>
        <description>Stage can have a Stage Detail (Substage) to determine where the Opportunity is in the process.</description>
        <inlineHelpText>Stage can have a Stage Detail (Substage) to determine where the Opportunity is in the process.</inlineHelpText>
        <label>Opportunity Stage Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Opportunity_Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Stage_Details</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <inlineHelpText>Required to create or update an Opportunity.</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inquired</fullName>
                    <default>true</default>
                    <label>Inquired</label>
                </value>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Wait Listed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>File Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity created or updated by this Interaction, set by the Interaction Processor.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <description>Populates from RFI forms.</description>
        <label>Preferred First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <description>Preferred phone type</description>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Source_ID__c</fullName>
        <description>The ID of this Source (Interaction) from our previous SF org. Used to verify data migration. Delete when it&apos;s no longer necessary.</description>
        <externalId>true</externalId>
        <label>Previous Source ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Affiliation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the Affiliation created from Affiliated Account should be set to Primary.</description>
        <inlineHelpText>Check this box to indicate the Affiliated Account is the Contact&apos;s main affiliation for that Account type.</inlineHelpText>
        <label>Primary Affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Search_Text__c</fullName>
        <description>Used by the TDTM_Term_Program_Lookup to find a Program. Value should match the Program_Name_on_Application__c field on the Program__c object (not Account).</description>
        <label>Program Search Text</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Notes__c</fullName>
        <description>Notes and other fields from RFI forms.</description>
        <label>RFI Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RNL_AFP__c</fullName>
        <label>RNL AFP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RNL_TAG_Planning_to_Apply__c</fullName>
        <description>Loaded from RNL data</description>
        <label>RNL TAG Planning to Apply</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <description>Values are based on the HEDA Race field, which matches IPEDS standards.</description>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The general plan or program the individual is interested in for marketing. A lookup to Program with a filter criteria of Record Type = Recruitment Program.</description>
        <inlineHelpText>The general plan or program the individual is interested in for marketing.</inlineHelpText>
        <label>Recruitment Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Recruitment Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Recruitment_Program_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <description>The School in which the student is interested</description>
        <inlineHelpText>The School in which the student is interested</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <filterItems>
                <field>Program__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Interactions (Secondary Academic Program)</relationshipLabel>
        <relationshipName>InteractionsSecondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Self_Reported_ACT__c</fullName>
        <label>Self Reported ACT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_GPA__c</fullName>
        <label>Self Reported GPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Reported_SAT__c</fullName>
        <description>Self Reported ACT</description>
        <label>Self Reported SAT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Detail__c</fullName>
        <description>Sub-field of Source Type.</description>
        <label>Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Source__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACT - Purchased</fullName>
                </value>
                <value>
                    <fullName>ACT - Self submitted</fullName>
                </value>
                <value>
                    <fullName>ActSix</fullName>
                </value>
                <value>
                    <fullName>Admitted Student Overnight</fullName>
                </value>
                <value>
                    <fullName>All State Music</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Board Member</fullName>
                </value>
                <value>
                    <fullName>Boys Basketball</fullName>
                </value>
                <value>
                    <fullName>Boys Soccer</fullName>
                </value>
                <value>
                    <fullName>Business Academy</fullName>
                </value>
                <value>
                    <fullName>Cappex</fullName>
                </value>
                <value>
                    <fullName>CASPA</fullName>
                </value>
                <value>
                    <fullName>CBSS</fullName>
                </value>
                <value>
                    <fullName>CCCU</fullName>
                </value>
                <value>
                    <fullName>Chegg/Zinch</fullName>
                </value>
                <value>
                    <fullName>Christian Connector</fullName>
                </value>
                <value>
                    <fullName>CLT - Purchased</fullName>
                </value>
                <value>
                    <fullName>CLT - Self submitted</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>College Board</fullName>
                </value>
                <value>
                    <fullName>College in the Schools</fullName>
                </value>
                <value>
                    <fullName>College Raptor</fullName>
                </value>
                <value>
                    <fullName>College Transcripts</fullName>
                </value>
                <value>
                    <fullName>Community College</fullName>
                </value>
                <value>
                    <fullName>Consortium</fullName>
                </value>
                <value>
                    <fullName>Converge</fullName>
                </value>
                <value>
                    <fullName>Cross Country</fullName>
                </value>
                <value>
                    <fullName>Cru</fullName>
                </value>
                <value>
                    <fullName>DACAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Number__c</fullName>
        <description>Updated by an Apex class Source_PrimaryHandler. Used to calculate primary source.</description>
        <label>Source Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <description>Populates Student Type on the Opportunity.</description>
        <label>Student Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BUILD</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>New Student Previous PSEO</fullName>
                </value>
                <value>
                    <fullName>PSEO</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Search_Text__c</fullName>
        <description>Used by the TDTM_Term_Program_Lookup to find a term. Value should be like &quot;Fall 2019&quot; or &quot;Spring 2020&quot;. CAS Interactions will use the Graduation Year field instead of this one.</description>
        <label>Term Search Text</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>University_Email__c</fullName>
        <label>University Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>Populates from RFI forms.</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Zapier_Information__c</fullName>
        <description>Info from Zapier to help track down issues related to this entry.</description>
        <label>Zapier Information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All_Interactions</fullName>
        <columns>NAME</columns>
        <columns>Interaction_Status__c</columns>
        <columns>Interaction_Source__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>Lead__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Interaction_Source__c</field>
            <operation>equals</operation>
            <value>Purchase List</value>
        </filters>
        <label>All Interactions</label>
    </listViews>
    <listViews>
        <fullName>Family_Member_Interactions</fullName>
        <columns>NAME</columns>
        <columns>Interaction_Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Contact__c</columns>
        <columns>Age__c</columns>
        <columns>RFI_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Source__c</field>
            <operation>equals</operation>
            <value>Family Member Create</value>
        </filters>
        <label>Family Member Interactions</label>
    </listViews>
    <listViews>
        <fullName>Interaction_Status_New</fullName>
        <columns>NAME</columns>
        <columns>Academic_Program__c</columns>
        <columns>Academic_Term__c</columns>
        <columns>School_College__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Interaction_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Interaction Status: New</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>